Ya se envian los step de el secuenciador a el servicio de windows y se monitorean en Web

--- a/ZamStep/ZamStep.csproj
+++ b/ZamStep/ZamStep.csproj
@@ -205,6 +205,7 @@
     <Compile Include="JSonUtilities.cs" />
     <Compile Include="ManagementEventApplication.cs" />
     <Compile Include="MeasureModel.cs" />
+    <Compile Include="MQResponse.cs" />
     <Compile Include="NestConfiguration.cs">
       <SubType>Form</SubType>
     </Compile>
